<resources>
    <string name="app_name">BTConnection</string>

    <string name="open_bt">打开蓝牙</string>
    <string name="close_bt">关闭蓝牙</string>
    <string name="seaching_device">搜索中</string>
    <string name="seach_device">搜索设备</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stacked_bar">StackedBarActivity</string>
    <string name="title_activity_chart_base">ChartBase</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="tab_devices">设备</string>
    <string name="tab_graph">数据</string>
    <string name="tab_about">关于</string>
    <string name="version">v 1.1</string>
    <string name="copy_right">Copyright ©2015 Jiangsu University of Science and Technology</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
